--- a/style.css
+++ b/style.css
@@ -52,6 +52,15 @@ color: #ffffff;
       padding-left: 10vw;
       padding-right: 10vw;
     }
+
+    #hello {
+      font-size: 80pt;
+    }
+
+    #world {
+      font-size: 80pt;
+      padding-left: 8vw;
+    }
 }
 /* For extra small and small */
 @media (max-width: 767px) {
@@ -62,6 +71,20 @@ color: #ffffff;
 
   #company {
     display:none;
+  }
+
+  #hello {
+    font-size: 22vw;
+  }
+
+  #world {
+    font-size: 22vw;
+    padding-left: 22vw;
+  }
+
+  .navbar-toggler {
+    padding: .25rem .25rem;
+    font-size: 1rem;
   }
 
   .featurette-heading{
@@ -94,8 +117,7 @@ color: #ffffff;
 #hello {
   line-height: 1;
   font-weight: bolder;
-  font-family: Impact, Lucida;
-  font-size: 96pt;
+  font-family: 'Bowlby One SC', Lucida;
   margin-right:auto;
   margin-bottom: 0;
   padding-bottom:0;
@@ -106,10 +128,8 @@ color: #ffffff;
   line-height: 1;
   font-weight: bolder;
   font-family: 'League Script', Snell Roundhand, Brush Script MT, cursive;
-  font-size: 80pt;
   margin-top: 0;
   margin-right:auto;
-  padding-left: 8vw;
   color: #ffb3d9;
 }
 
@@ -166,7 +186,7 @@ color: #ffffff;
   margin-left:auto;
   margin-right:auto;
   width: auto;
-  max-width: 300px;
+  max-width: 90vw;
   height: auto;
   border-radius: 50%;
   border: 1px solid #ddd;
